# green-eggs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  codecov.yml  example.py  mypy.ini  noxfile.py  pyproject.toml  renovate.json
.github/workflows/: coverage.yml  lint-code.yml  lint-pr.yml  test-code.yml
dev-runners/: api-code-updater-ts.py  api-code-updater.py  api.py.template  direct.py.template  direct.ts  direct.ts.template  linters-and-fixers.sh  lintersAndFixers.sh  stress.py  types.ts  types.ts.template
green_eggs/: __init__.py  api.py  bot.py  channel.py  client.py  config.py  constants.py  data_types.py  exceptions.py  types.py  utils.py
green_eggs/api/: __init__.py  common.py  direct.py
green_eggs/commands/: __init__.py  registry.py  triggers.py
green_eggs/reactive/: channel.py  client.py  operators.py
green_eggs/reactive/api/: __init__.py  common.py  direct.py
stubs/green_eggs/: __init__.pyi  api.pyi  bot.pyi  channel.pyi  client.pyi  config.pyi  constants.pyi  data_types.pyi  exceptions.pyi  types.pyi  utils.pyi
stubs/green_eggs/api/: __init__.pyi  common.pyi  direct.pyi
stubs/green_eggs/commands/: __init__.pyi  registry.pyi  triggers.pyi
stubs/green_eggs/reactive/: channel.pyi  client.pyi  operators.pyi
stubs/green_eggs/reactive/api/: __init__.pyi  common.pyi  direct.pyi
stubs/green_eggs/reactive/operators/: _switch_map.pyi
tests/: __init__.py  fixtures.py  test_api.py  test_api_common.py  test_api_direct.py  test_bot.py  test_channel.py  test_client.py  test_commands.py  test_config.py  test_data_types.py  test_green_eggs.py  test_utils.py
tests/reactive/: __init__.py  fixtures.py  test_channel.py  test_channel_caches.py  test_client.py  test_operators.py
tests/reactive/api/: test_api.py  test_common.py  test_direct.py
tests/utils/: compat.py  data_types.py  raw_data.json
