[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py36"]

[tool.isort]
force_sort_within_sections = true
known_first_party = ["green_eggs"]
line_length = 120
profile = "black"
py_version = '3'

[tool.mypy]
show_error_codes = true

[[tool.mypy.overrides]]
module = "aiologger.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lxml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[tool.poetry]
name = "green-eggs"
version = "0.1.0"
description = "A framework to build a Twitch chatbot."
authors = ["Hameed Gifford <giff.h92@gmail.com>"]

[tool.poetry.dependencies]
aiohttp = {extras = ["speedups"], version = "^3.7.4"}
aiologger = {extras = ["aiofiles"], version = "^0.6.0"}
python = "^3.7"
websockets = "^8.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
docformatter = "^1.4"
ipython = "^7.26.0"
isort = "^5.9.3"
lxml = "^4.6.3"
mypy = "^0.910"
nox-poetry = "^0.8.6"
pytest = "^5.2"
pytest-asyncio = "^0.15.1"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
