[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py37", "py38", "py39", "py310"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@(abc\\.)?abstractmethod",
    "if __name__ == .__main__.:",
]
precision = 2

[tool.isort]
force_sort_within_sections = true
known_first_party = ["green_eggs"]
line_length = 120
profile = "black"
py_version = '3'

[tool.mypy]
check_untyped_defs = true
exclude = "stubs/"
show_error_codes = true

[[tool.mypy.overrides]]
module = "aiologger.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lxml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytest.*"
ignore_missing_imports = true

[tool.poetry]
name = "green-eggs"
version = "0.3.0"
description = "A framework to build a Twitch chatbot."
license = "ISC"
authors = ["Hameed Gifford <giff.h92@gmail.com>"]
readme = "README.md"
include = ["CHANGELOG.md"]
repository = "https://github.com/giff-h/green-eggs/"
keywords = ["Twitch", "chatbot", "async"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
aiologger = {extras = ["aiofiles"], version = "^0.7.0"}
python = "^3.7"
websockets = "^10.1"
asyncstdlib = "^3.10.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
docformatter = "^1.4"
ipython = "^7.31.1"
isort = "^5.10.1"
lxml = "^4.6.4"
mypy = "^0.991"
nox-poetry = "^1.0.0"
pytest = "^7.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.6.1"

[tool.pytest.ini_options]
asyncio_mode = 'auto'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
